--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="https://gpreet013.github.io/My_personal_portfolio/">
             <button><p>&#127759;Visit&#127759;</p></button>
         </a>
-        <a href="/assets/Resume_Gurpreet kaur_Finall.pdf">
+        <a href="/assets/Gurpreet kaur_MyResume_finalle.pdf">
             <button><p>📚Download CV</p></button>
         </a>
         <a href="https://www.linkedin.com/in/gurpreet-kaur-3b6194200/">
